--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
     "react-redux": "^7.2.8",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
