--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^3.2.5",
+    "react-leaflet": "^3.2.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
@@ -30,16 +30,9 @@
       "react-app"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+   "not dead",
+   "not op_mini all"
+  ]
 }
