--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "styled-components": "5.3.3"
   },
   "devDependencies": {
@@ -32,7 +33,7 @@
   },
   "browserslist": [
     ">0.2%",
-   "not dead",
-   "not op_mini all"
+    "not dead",
+    "not op_mini all"
   ]
 }
