--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "start:server": "node server/server",
     "start": "concurrently -k -p \"{name}\" -n \"CLIENT,SERVER\" -c \"green,blue\" \"npm:start:client\" \"npm:start:server\"",
     "build": "react-scripts build",
-    "eslint": "eslint --ext .jsx --ext .js src/"
+    "start:eslint": "eslint --ext .jsx --ext .js src/"
   },
   "eslintConfig": {
     "extends": [
